# lab4_ing_software

./: CMakeLists.txt  README.md  Triangle.h  TriangleTest.cpp  reporte.json  reporte.xml
